[package]
name = "packe"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }
base64 = "0.22.0"
deadpool = { version = "0.11.2", features = ["managed"]}
futures = "0.3.30"
md-5 = "0.10.6"
native-tls = "0.2.11"
quick-xml = { version = "0.31.0", features = [ ]}
rand = "0.8.5"
rods_prot_msg = { path = "../../rods_prot_msg/" }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"

[features]
arbitrary = [ "dep:arbitrary" ]
exec_rule = []
