[package]
name = "irods_client"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }
base64 = "0.22.0"
deadpool = { version = "0.11.2", features = ["managed"]}
derive_builder = "0.20.0"
exec_rule_macro = { path = "../exec_rule_macro" }
futures = "0.3.30"
md-5 = "0.10.6"
native-tls = "0.2.11"
irods-xml = { version = "0.31.0", path = "../irods-xml/" }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"

[features]
arbitrary = [ "dep:arbitrary" ]
